Closed
Bug 1602880
Opened 3 years ago
Closed 3 years ago
Rename the pref to "dom.webgpu.enabled"
Categories
(Core :: Graphics: WebGPU, defect, P3)
Core
Graphics: WebGPU
Tracking
()
RESOLVED
FIXED
mozilla73
People
(Reporter: kvark, Assigned: kvark)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
Details | Review | |
16.57 KB,
patch
|
RyanVM
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This would be more consistent with other prefs we have, like "gfx.webrender.enabled"
Assignee | ||
Updated•3 years ago
|
Blocks: webgpu-mvp
Assignee | ||
Comment 1•3 years ago
|
||
addresses 1600364
Pushed by dmalyshau@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/09dedc944b0a Rename dom.webgpu.enable pref and restrict the CTS r=jgilbert,bzbarsky
Comment 3•3 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Comment 4•3 years ago
|
||
Can we land this on Beta as well to fix bug 1600364?
Flags: needinfo?(dmalyshau)
Assignee | ||
Comment 5•3 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]: WebGPU CTS tests
[User impact if declined]: intermittent failure on CI
[Is this code covered by automated tests?]: yes, the change disables the tests
[Has the fix been verified in Nightly?]: not yet
[Needs manual test from QE? If yes, steps to reproduce]: I don't think so
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: no
[Why is the change risky/not risky?]: it's messing with the setting name and the tests of a feature that is disabled by default
[String changes made/needed]:
Flags: needinfo?(dmalyshau)
Attachment #9115540 -
Flags: approval-mozilla-beta?
Comment 6•3 years ago
|
||
Comment on attachment 9115540 [details] [diff] [review] webgpu-settings.patch Switches a pref name to a more common convention and disables some leaky tests. Approved for 72.0b6.
Attachment #9115540 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•3 years ago
|
||
bugherderuplift |
status-firefox72:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•