Bug 1602880 - Rename dom.webgpu.enable pref and restrict the CTS. r=jgilbert,bzbarsky, a=RyanVM

addresses 1600364